# seutil

./: .gitignore  .readthedocs.yaml  AGENTS.md  DOCKERFILE  Dockerfile  Makefile  README.md  README.rst  TODO.md  install.sh  install_anaconda.sh  prepare-env-no-opt-deps.sh  prepare-env.sh  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: python-build.yml  python-integration-tests.yml  python-package.yml  python-publish.yml  python-test.yml  python-unit-tests.yml
deprecated/: args.py  test_LoggingUtils.py  test_debug.py
deprecated/project/: ProjectResults.py  __init__.py  test_project.py
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst  seutil.latex.rst  seutil.project.rst  seutil.rst  tests.rst
resources/: .gitignore  git-game.git.tgz
resources/sample-directory/: sample-file-lorem
seutil/: BashUtils.py  CliUtils.py  GitHubUtils.py  IOUtils.py  LoggingUtils.py  MiscUtils.py  Stream.py  TimeUtils.py  __init__.py  _config.py  args.py  bash.py  debug.py  io.py  latex.py  log.py  maven.py  pbar.py  project.py
seutil/ds/: __init__.py  graph_common.py  lattice.py  trie.py
seutil/latex/: File.py  Macro.py
seutil/latex_old/: __init__.py
seutil/project/: Project.py  ProjectResults.py
src/seutil/: BashUtils.py  CliUtils.py  GitHubUtils.py  IOUtils.py  LoggingUtils.py  MiscUtils.py  Stream.py  TimeUtils.py  __about__.py  __init__.py  _config.py  arg.py  bash.py  doi.py  io.py  latex.py  log.py  maven.py  pbar.py  powershell.py  project.py  time.py
src/seutil/ds/: __init__.py  graph_common.py  lattice.py  trie.py
src/seutil/latex_old/: File.py  Macro.py  Table.py  __init__.py
test-subjects/projects/: sample-projects.json
tests/: TestSupport.py  playground.py  test_BashUtils.py  test_GitHubUtils.py  test_IOUtils.py  test_LoggingUtils.py  test_arg.py  test_args.py  test_bash.py  test_io.py  test_io_path.py  test_io_rw.py  test_io_ser.py  test_io_ser_3rd_party.py  test_latex.py  test_latex_integration.py  test_log.py  test_project.py
tests/ds/: test_lattice.py  test_trie.py
tests/integration/: test_latex_integration.py
tests/unit/: test_BashUtils.py  test_GitHubUtils.py  test_arg.py  test_bash.py  test_io_path.py  test_io_rw.py  test_io_ser.py  test_io_ser_3rd_party.py  test_latex.py  test_log.py  test_project.py  test_time.py  test_time_utils.py
