[project]
name = "seutil"
version = "0.9.0"
description = "Python utilities for SE research"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [{ name = "Pengyu Nie", email = "prodigy.sov@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "ijson~=3.1.4",
    "igraph>=0.9.10",
    "jsonargparse[signatures]>=4.1.4",
    "lazy-import>=0.2.2",
    "numpy>=1.14.4",
    "PyGitHub>=1.40",
    "PyYAML>=5.1",
    "tqdm>=4.62.3",
    "typing_inspect>=0.4.0",
    "unidiff>=0.5.5",
    "xmltodict>=0.2.2",
]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[dependency-groups]
dev = ["coverage[toml]", "pytest", "pytest-cov", "ruff"]
dev-opt = ["numpy", "pandas", "torch", "ipykernel"]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Documentation = "https://seutil.readthedocs.io/en/latest/"
Issues = "https://github.com/pengyunie/seutil/issues"
Source = "https://github.com/pengyunie/seutil"

# testing (pytest) and coverage (coverage, pytest-cov)
[tool.coverage.run]
source_pkgs = ["seutil", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
seutil = ["src/seutil", "*/seutil/src/seutil"]
tests = ["tests", "*/seutil/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
addopts = "--ignore=deprecated --cov --cov-report xml:cov.xml"
testpaths = ["tests/unit"]


# linting (ruff)
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "F", # pyflakes
    "I", # isort
]
isort.known-first-party = ["seutil"]
